tools/flowc/tests/errors/error20.flow
import string;

// Test on unused locals

func1(a : int) {
	c = a + a;
	a
}

func2(a : int, b : string) {
	a + a
}

func3(a : int) {
	g = \x, y -> { x + 1 };
	g(a, a)
}
